--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typescript": "^4.3.2"
   },
   "scripts": {
+    "start": "yarn watch",
+    "build": "tsc",
+    "watch": "tsc --watch",
     "prettier": "prettier 'src/**/*.ts'",
     "prettier:fix": "prettier --write 'src/**/*.ts'",
     "eslint": "eslint 'src/**/*.ts'",
