--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{ts,js}": ["eslint --max-warnings=0", "prettier --write"]
   }
 }
