--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "ts-template",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "git@github.com:ShaunLWM/ts-template.git",
-  "author": "ShaunLWM",
-  "license": "MIT",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0",
-    "typescript": "^4.3.2"
-  },
-  "scripts": {
-    "start": "yarn watch",
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "prettier": "prettier 'src/**/*.ts'",
-    "prettier:fix": "prettier --write 'src/**/*.ts'",
-    "eslint": "eslint 'src/**/*.ts'",
-    "eslint:fix": "eslint --fix 'src/**/*.ts'",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,js}": ["eslint --max-warnings=0", "prettier --write"]
-  }
+	"name": "ts-template",
+	"version": "0.0.1",
+	"main": "index.js",
+	"repository": "git@github.com:ShaunLWM/ts-template.git",
+	"author": "ShaunLWM",
+	"license": "MIT",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.26.0",
+		"@typescript-eslint/parser": "^4.26.0",
+		"eslint": "^7.27.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "8.3.0",
+		"eslint-plugin-prettier": "3.4.0",
+		"husky": "^6.0.0",
+		"lint-staged": "^11.0.0",
+		"prettier": "^2.3.0",
+		"typescript": "^4.3.2"
+	},
+	"scripts": {
+		"start": "yarn watch",
+		"build": "tsc",
+		"watch": "tsc --watch",
+		"prettier": "prettier 'src/**/*.ts'",
+		"prettier:fix": "prettier --write 'src/**/*.ts'",
+		"eslint": "eslint 'src/**/*.ts'",
+		"eslint:fix": "eslint --fix 'src/**/*.ts'",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{ts,js}": [
+			"eslint --max-warnings=0",
+			"prettier --write"
+		]
+	}
 }
