--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "ShaunLWM",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^26.0.23",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
 		"eslint": "^7.27.0",
@@ -13,8 +14,10 @@
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-prettier": "3.4.0",
 		"husky": "^6.0.0",
+		"jest": "^27.0.4",
 		"lint-staged": "^11.0.0",
 		"prettier": "^2.3.0",
+		"ts-jest": "^27.0.3",
 		"typescript": "^4.3.2"
 	},
 	"scripts": {
@@ -25,7 +28,8 @@
 		"prettier:fix": "prettier --write 'src/**/*.ts'",
 		"eslint": "eslint 'src/**/*.ts'",
 		"eslint:fix": "eslint --fix 'src/**/*.ts'",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "jest"
 	},
 	"lint-staged": {
 		"*.{ts,js}": [
