--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 		"@types/jest": "^26.0.23",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
-		"eslint": "^7.27.0",
-		"eslint-config-airbnb": "^18.2.1",
+		"eslint": "7.2.0",
+		"eslint-config-airbnb-base": "14.2.1",
 		"eslint-config-prettier": "8.3.0",
+		"eslint-plugin-import": "2.22.1",
 		"eslint-plugin-prettier": "3.4.0",
 		"husky": "^6.0.0",
 		"jest": "^27.0.4",
