--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,11 @@
 	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended", "prettier"],
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["@typescript-eslint", "prettier"],
+	"env": {
+		// "browser": true,
+		// "amd": true,
+		"node": true
+	},
 	"rules": {
 		"prettier/prettier": [
 			"error",
