--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "ShaunLWM",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "yarn watch",
     "build": "tsc",
